--- a/code.html
+++ b/code.html
@@ -4,7 +4,72 @@
   <meta charset="UTF-8" />
   <title>Weather App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom, #2193b0, #6dd5ed);
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: auto;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+      padding: 30px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    }
+
+    h1 {
+      margin-bottom: 30px;
+      font-size: 2.5rem;
+    }
+
+    .search-box {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      width: 60%;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 10px 15px;
+      background: #005f73;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #0a9396;
+    }
+
+    .weather-info {
+      font-size: 1.2rem;
+    }
+
+    .weather-info h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    .weather-info p {
+      margin: 5px 0;
+    }
+  </style>
 </head>
 <body>
 
@@ -20,6 +85,45 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    async function getWeather() {
+      const city = document.getElementById("cityInput").value.trim();
+      const weatherDiv = document.getElementById("weatherInfo");
+
+      if (!city) {
+        weatherDiv.innerHTML = "<p>Please enter a city name.</p>";
+        return;
+      }
+
+      const apiKey = "YOUR_API_KEY"; // <-- Replace this with your real API key
+      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
+
+      try {
+        weatherDiv.innerHTML = "<p>Loading...</p>";
+        const response = await fetch(url);
+
+        if (!response.ok) {
+          throw new Error("City not found");
+        }
+
+        const data = await response.json();
+        const temp = data.main.temp;
+        const condition = data.weather[0].description;
+        const humidity = data.main.humidity;
+        const wind = data.wind.speed;
+
+        weatherDiv.innerHTML = `
+          <h2>${data.name}, ${data.sys.country}</h2>
+          <p><strong>Temperature:</strong> ${temp}°C</p>
+          <p><strong>Condition:</strong> ${condition}</p>
+          <p><strong>Humidity:</strong> ${humidity}%</p>
+          <p><strong>Wind Speed:</strong> ${wind} m/s</p>
+        `;
+      } catch (error) {
+        weatherDiv.innerHTML = `<p>Error: ${error.message}</p>`;
+      }
+    }
+  </script>
+
 </body>
 </html>
